cargo-features = ["edition2024"]

[package]
name = "firmaware"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rustls = "0.20"
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
env_logger = "0.10" # For enhanced logging (optional but recommended)
log = "0.4"         # For logging macros

